2009-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/IkvmLibraryProject.xpt.xml: Removed gtk#
	  references from the library template.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* JavaBinding.addin.xml: Bump MD version.

2009-10-09  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.sln:
	* gtk-gui/gui.stetic: Flush.

2009-10-09  Lluis Sanchez Gual  <lluis@novell.com>

	* IKVMCompilerManager.cs: Improve error message when the java
	  compiler is not found.

	* JavaBinding.csproj: Flush.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* JavaBinding.addin.xml: Bump MD version.

2009-09-07  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaLanguageBinding.cs: Add support for CLR 2.0.

	* JavaBinding.sln:
	* gtk-gui/gui.stetic: Update.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* JavaBinding.csproj:
	* gtk-gui/gui.stetic: We now depend on gtk# 2.12.8, Mono 2.4,
	  and Mono.Addins 0.4.

2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.sln:
	* JavaBinding.addin.xml: Remove obsolete extension.

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* JavaLanguageBinding.cs: Track comment tag API.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* JavaBinding.addin.xml: Bump MD version.

2009-03-20  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/IkvmGtkApplicationProject.xpt.xml:
	* templates/IkvmGnomeApplicationProject.xpt.xml:
	* templates/IkvmGladeApplicationProject.xpt.xml: Don't require
	  specific GTK# versions.

2009-03-17  Michael Hutchinson  <mhutchinson@novell.com>

	* IKVMCompilerManager.cs: Track API.

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* JavaBinding.sln: Fix translation projects' GUIDs.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* JavaBinding.sln: Set policies. Remove unused name attribute.
