@@ -1,3 +1,12 @@
+2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* IKVMCompilerManager.cs:
+	* JavaLanguageBinding.cs: Introduced the ConfigurationSelector
+	  class to all methods that previously took a configuration
+	  name as string. This eliminates the ambiguity between
+	  solution configuration names and project configuration
+	  names.
+
 2009-11-10  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* templates/IkvmLibraryProject.xpt.xml: Removed gtk#
